# ant-challenge

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  cargo.toml  index.html  package.json  webpack.config.js
antbinding/: Cargo.toml
antbinding/src/: lib.rs  math.rs  world.rs
antbinding/test/: main.py
asserts/: ant-texture.xcf  cube-texture.xcf
blender/: ant.blend  ant.blend1
blender/anthill/: anthill.blend  anthill.blend1
blender/raspberry/: raspberry.blend  raspberry.blend1
blender/sugar/: sugar.blend
colonies/: example.py
common/: Cargo.toml  README.md
common/src/: lib.rs  math.rs  objects.rs
engine/: Cargo.toml
engine/src/: world.rs
enviroment/: api.py  simulate.py
environment/: README.md  api.py  simulate.py
src/: app.rs  camera.rs  gl_utils.rs  lib.rs  main.rs  scene.rs  texture.rs
src/background/: mod.rs
src/ground/: mod.rs
src/mesh/: mod.rs  simple.frag  simple.vert  simple_mesh.rs
static/: index.html  index.scss
visu/: Cargo.toml  build.rs  index.html
visu/src/: app.rs  camera.rs  index.scss  main.rs  scene.rs
visu/src/background/: basic.vert
visu/src/ground/: ground.frag  ground.vert
visualisation/: Cargo.toml  LICENSE_MIT  bootstrap.js  package.json
visualisation/asserts/: ant.blend1
visualisation/assets/: ant.blend  map.xcf
visualisation/blender/sugar/: sugar.blend1
visualisation/src/: app.rs  basic.frag  gl_utils.rs  lib.rs  scene.rs
visualisation/src/ground/: mod.rs
visualisation/src/mesh/: simple.frag  simple.vert
visualisation/static/: index.scss
