[package]
name = "yew-wasm-pack-template"
version = "0.2.0"
authors = ["Justin Starry <justin.starry@icloud.com"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
strum = "0.17"
strum_macros = "0.17"
serde = "1"
serde_derive = "1"
bincode="*"
nalgebra = "*"
wasm-bindgen = "0.2.58"
web_logger = "0.2"
yew = { version = "0.15" }
js-sys = "0.3"
blender-armature = "=0.2.6"
blender-mesh =  {path="/home/matthias/workspace/github/landon/blender-mesh"}

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[build-dependencies]
glob="*"
bincode="*"
blender-armature = "=0.2.6"
blender-mesh = {path="/home/matthias/workspace/github/landon/blender-mesh"}
landon = {path = "/home/matthias/workspace/github/landon"}

[dependencies.web-sys]
version = "0.3.4"
features = [
  'KeyboardEvent',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
  'HtmlImageElement',
  'WebGlTexture'
]
