[package]
name = "antbinding"
version = "0.1.0"
authors = ["Matthias Lochbrunner <matthias_lochbrunner@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "antbinding"
crate-type = ["cdylib"]


[dependencies]
pyo3 = "0.14.5"
nalgebra = "0.20"
common = { path = "../common" }
engine = { path = "../engine" }