[package]
name = "visualization"
version = "0.1.0"
authors = ["Philip Peterson <pc.peterso@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1.3.3"
wee_alloc = "0.4"
yew = "0.18.0"
itertools = "0.10.1"
js-sys = "0.3.55"
log = "0.4.14"
nalgebra = "0.29.0"
wasm-bindgen = "0.2.78"
blender-mesh =  {path="/home/matthias/workspace/github/landon/blender-mesh"}
common = { path = "../common" }

[dependencies.web-sys]
version = "0.3.55"
features = ["WebGlRenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "WebGlBuffer",
  "HtmlCanvasElement",
  "WebGlTexture",
  "HtmlImageElement",
  "WebGlUniformLocation"
]

[build-dependencies]
glob="*"
bincode="*"
blender-armature = "=0.2.6"
blender-mesh = {path="/home/matthias/workspace/github/landon/blender-mesh"}
landon = {path = "/home/matthias/workspace/github/landon"}
